A bit of tweaking

--- a/regex.html
+++ b/regex.html
@@ -176,9 +176,9 @@ the subject.</p>
 <div class="slide">
 <h1>More Anchors</h1>
 <ul>
-    <li><code>\A</code></li>
-    <li><code>\z</code>, <code>\Z</code></li>
-    <li><code>\b</code>, <code>\B</code></li>
+    <li><code>\A</code> - Beginning of string</li>
+    <li><code>\z</code>, <code>\Z</code> - End of string</li>
+    <li><code>\b</code>, <code>\B</code> - Word/non-word boundary</li>
 </ul>
 <div class="handout">
     notes
@@ -188,8 +188,8 @@ the subject.</p>
 <div class="slide">
 <h1>Capturing</h1>
 <ul>
-    <li><code>(abc)</code></li>
-    <li><code>(?:abc)</code></li>
+    <li><code>(abc)</code> - capture and group</li>
+    <li><code>(?:abc)</code> - just group</li>
     <li><code>\1</code>, <code>\2</code>, <code>\3</code>, etc.</li>
 </ul>
 <div class="handout">
@@ -325,7 +325,6 @@ match nothing.</p>
     notes
 </div>
 </div>
-
 
 
 </body>
